Color contrast fixes

--- a/src/style/components/buttons.scss
+++ b/src/style/components/buttons.scss
@@ -65,7 +65,7 @@ button:disabled,
 .button.disabled,
 .button:disabled {
     pointer-events: none;
-    opacity: 0.4;
+    opacity: 0.8;
 }
 
 
