--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -41,10 +41,11 @@ $color-primary-light: #3eb0ef;
 $color-base-light: #fff;
 $color-base-light-inverted: #131313;
 $color-sub-base-light: #aaa;
-$color-border-light: #ddd;
+$color-border-light: #ababab;
 $color-bg-light: #f8f8f8;
 $color-bg-bright: #1d1d1f;
 $color-bg-bright-light: #1d1d1f;
 $color-bg-dark-light: #131313;
 $color-body-font-light: #131313;
+$color-body-font-light-2: #000000;
 $link-color-light: #0074c1;
